--- a/main.css
+++ b/main.css
@@ -409,7 +409,7 @@ footer {
 @media screen and (min-width: 750px) {
   .top-container {
     height: 100vh;
-    background: url("/images/desktop/image-header.jpg") no-repeat center center
+    background: url("./images/desktop/image-header.jpg") no-repeat center center
       fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
